--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -36,6 +36,7 @@
     background-color: #ede8e8;
     margin: 1.7rem 0 0 5rem;
     border-radius: 25px;
+    outline: 1px solid #0000003b;
 }
 
 #search input {
@@ -45,6 +46,7 @@
     background-color: #ede8e8;
     border-radius: 25px;
     padding-left: 25px;
+    outline: none;
 }
 
 #search button {
@@ -64,12 +66,12 @@
     width: 130px;
     height: 40px;
     cursor: pointer;
-    color: #fff;
-    background: #373649;
+    color: #000;
+    background: #e0e0e051;
     font-family: 'Kanit', sans-serif;
     /* background: #e5e4f3; */
     /* background: rgb(25, 25, 195); */
-    border: 1px;
+    border: 1px solid #0000003a;
     border-radius: 25px;
     letter-spacing: 1.5px;
     font-size: 18px;
@@ -77,7 +79,7 @@
 
 .login:hover {
     /*background: rgb(17, 17, 121);*/
-    background: rgb(25, 25, 195);
+    background: rgba(45, 45, 232, 0.782);
     color: #fff;
     font-weight: bold;
     transition: 0.5s;
@@ -99,7 +101,8 @@
     #search input {
         width: 80%;
         padding-left: 5px;
-        font-size: 12px;
+        font-size: 14px;
+        outline: none;
     }
     #search button {
         border-radius: 25px;
