--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -64,8 +64,10 @@ input {
     height: 40px;
     border-radius: 5px;
     font-family: 'Kanit', sans-serif;
+    background: transparent;
     padding: 5px;
-    outline: 1px solid #0000003b;
+    outline: none;
+    border-bottom: 1px solid #0000006b;
 }
 
 textarea {
@@ -74,8 +76,16 @@ textarea {
     resize: none;
     font-family: 'Kanit', sans-serif;
     padding: 5px;
-    outline: 1px solid #0000003b;
+    background: transparent;
+    outline: none;
+    border-bottom: 1px solid #0000006b;
     /*overflow-y: auto;*/
+}
+
+input:focus,
+textarea:focus {
+    outline: 1px solid #00000010;
+    border-bottom: 1px solid #000;
 }
 
 .about-form button {
