--- a/assets/css/agregarProductos.css
+++ b/assets/css/agregarProductos.css
@@ -8,38 +8,52 @@
     color: #17026c;
 }
 
-#login {
-    padding: 0 0 100px 0;
+#agregar {
+    padding: 50px 0 80px 0;
     background-color: #07070711;
     font-family: 'Kanit', sans-serif;
 }
 
-.login-form {
+.agregar-form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login-form h3 {
-    margin-top: 60px;
-    text-align: center;
+.agregar-form h3 {
+    /*margin-top: 60px;*/
+    /*text-align: center;*/
     margin-bottom: 20px;
+    font-size: 32px;
+    color: #454545;
 }
 
-.login-form input {
-    width: 350px;
-    outline: none;
+.agregar-form input {
+    width: 25rem;
+    margin-bottom: 25px;
     background: transparent;
+    outline: none;
     border-bottom: 1px solid #0000006b;
 }
 
-.login-form input:focus {
+.agregar-form input:focus {
     border-bottom: 1px solid #000;
 }
 
-.login-form button {
-    width: 350px;
-    margin-top: 10px;
+.agregar-form textarea {
+    margin-bottom: 25px;
+    width: 25rem;
+    background: transparent;
+    outline: none;
+    border-bottom: 1px solid #0000006b;
+}
+
+.agregar-form textarea:focus {
+    border-bottom: 1px solid #000;
+}
+
+.agregar-form button {
+    width: 15rem;
     cursor: pointer;
     height: 40px;
     border-radius: 5px;
@@ -48,7 +62,7 @@
     border: 1px solid #0000004e;
 }
 
-.login-form button:hover {
+.agregar-form button:hover {
     background: #3525ebfa;
 }
 
@@ -63,7 +77,7 @@
 }
 
 @media screen and (max-width: 920px) {
-    .login-form button {
+    .agregar-form button {
         width: 200px;
     }
 }
@@ -83,14 +97,11 @@
     }
 }
 
-@media screen and (max-width: 500px) {
-    .login-form input {
-        width: 70%;
+@media screen and (max-width: 405px) {
+    .agregar-form input {
+        width: 100%;
     }
-    .login-form button {
-        width: 50%;
-    }
-    .about-form button {
-        width: 50%;
+    .agregar-form textarea {
+        width: 100%;
     }
 }
