--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -62,27 +62,27 @@
 }
 
 .login {
-    margin: 1.8rem 5rem 0 0;
-    width: 130px;
-    height: 40px;
+    outline: none;
+    margin: 1.9rem 2rem 0 0;
+    padding: 0 15px;
     cursor: pointer;
     color: #000;
-    background: #e0e0e051;
+    background: transparent;
     font-family: 'Kanit', sans-serif;
     /* background: #e5e4f3; */
     /* background: rgb(25, 25, 195); */
-    border: 1px solid #0000003a;
-    border-radius: 25px;
-    letter-spacing: 1.5px;
+    border: none;
+    border-radius: 18px;
+    letter-spacing: 1px;
     font-size: 18px;
 }
 
 .login:hover {
     /*background: rgb(17, 17, 121);*/
-    background: rgba(45, 45, 232, 0.782);
-    color: #fff;
-    font-weight: bold;
-    transition: 0.5s;
+    color: rgb(45, 45, 232);
+    font-weight: 800;
+    transition: 0.2s;
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 805px) {
@@ -108,12 +108,12 @@
         border-radius: 25px;
     }
     .login {
-        width: 100px;
+        /*width: 100px;
         letter-spacing: 0;
         position: absolute;
         left: 80%;
         margin-top: 1.3rem;
-        /*height: 25px;*/
+        height: 25px;*/
         margin-right: 1rem;
     }
 }
