--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
 #content {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     background-color: #07070711;
     padding-bottom: 50px;
+    font-family: 'Kanit', sans-serif;
     /*margin-bottom: 25px;*/
     /*margin: 0 5rem 0 5rem;*/
 }
@@ -26,13 +28,15 @@
 
 #content h3 {
     margin: 3rem;
+    font-size: 24px;
 }
 
 #content a {
-    margin-left: 0.8rem;
+    /*margin-left: 0.8rem;*/
     text-decoration: none;
     color: #352bef;
     cursor: pointer;
+    font-weight: 800;
 }
 
 #content a:hover {
@@ -54,21 +58,25 @@
 }
 
 .product img {
+    height: 160px;
     width: 150px;
+    margin-top: 15px;
 }
 
 .product h4 {
-    margin-left: 0.8rem;
+    /*margin-left: 0.8rem;*/
     padding-bottom: 5px;
 }
 
 .product p {
-    margin-left: 0.8rem;
+    /*margin-left: 0.8rem;*/
     padding-bottom: 5px;
+    color: #00000085;
+    font-weight: 800;
 }
 
 .product a {
-    margin-left: 0.8rem;
+    /*margin-left: 0.8rem;*/
 }
 
 @media screen and (max-width: 1006px) {
