--- a/assets/css/agregarProductos.css
+++ b/assets/css/agregarProductos.css
@@ -8,8 +8,13 @@
     color: #17026c;
 }
 
+.volver {
+    padding: 1rem 0 2rem 1rem;
+    display: block;
+}
+
 #agregar {
-    padding: 50px 0 80px 0;
+    padding: 0 0 80px 0;
     background-color: #07070711;
     font-family: 'Kanit', sans-serif;
 }
