--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -103,12 +103,12 @@
     /*#content {
         margin: 0 0 0 0;
     }*/
-    #content h3 {
+    /*#content h3 {
         margin: 0.8rem;
-    }
-    #content a {
+    }*/
+    /*#content a {
         margin: 0.8rem;
-    }
+    }*/
     .products {
         /*width: 100%;*/
         /*display: flex;
