--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -104,11 +104,11 @@
         margin: 0 0 0 0;
     }*/
     #content h3 {
-        margin: 0.8rem;
+        margin: 0.8rem 0;
     }
-    /*#content a {
-        margin: 0.8rem;
-    }*/
+    #content .a-category {
+        margin: 1.2rem 3rem 0 0;
+    }
     .products {
         /*width: 100%;*/
         /*display: flex;
