--- a/assets/css/agregarProductos.css
+++ b/assets/css/agregarProductos.css
@@ -33,8 +33,26 @@
     color: #454545;
 }
 
+
+/*#img-label {
+    color: #0000009c;
+border-radius: 5px;
+
+padding: 0.4rem;
+margin-bottom: 1rem;
+font-weight: 400;
+width: 25rem;
+align-items: left;
+border-bottom: 1px solid #0000006b;
+font-size: 14px;
+cursor: pointer;
+
+}*/
+
 .agregar-form input {
     width: 25rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     margin-bottom: 25px;
     background: transparent;
     outline: none;
@@ -109,4 +127,7 @@
     .agregar-form textarea {
         width: 100%;
     }
+    /*#img-label {
+        width: 100%;
+    }*/
 }
