--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -79,8 +79,10 @@
     font-weight: 800;
 }
 
-.product a {
-    /*margin-left: 0.8rem;*/
+.product .see,
+.delete,
+.edit {
+    display: none;
 }
 
 @media screen and (max-width: 1006px) {
